@@ -1,3 +1,6 @@
+2005-06-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* audio/midi_drivers/various: compilation fixes, sync with pentagram
+
 2005-06-07  Ryan Nunn  <colourles@users.sourceforge.net>
 	* headers/pent_include.h : Header for 'seemlessly' integrating
 	  Pentagram code into Exult
